--- a/style.css
+++ b/style.css
@@ -1,48 +1,98 @@
 #chessboard {
-    display: grid;
-    grid-template-columns: 30px repeat(8, 1fr); /* 1 column for row labels + 8 columns for tiles */
-    grid-template-rows: 30px repeat(8, 1fr); /* 1 row for column labels + 8 rows for tiles */
-    gap: 0;
-    width: 500px; /* or any size you prefer */
-    height: 500px; /* should be same as width for square tiles */
+  display: grid;
+  grid-template-columns: 30px repeat(8, 1fr); /* 1 column for row labels + 8 columns for tiles */
+  grid-template-rows: 30px repeat(8, 1fr); /* 1 row for column labels + 8 rows for tiles */
+  gap: 0;
+  width: 500px; /* or any size you prefer */
+  height: 500px; /* should be same as width for square tiles */
 }
 
 .labels {
-    display: contents; /* To align labels with the grid */
+  display: contents; /* To align labels with the grid */
 }
 
 .label {
-    font-size: 20px; /* Adjust label size as needed */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  font-size: 20px; /* Adjust label size as needed */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .row {
-    display: contents; /* To align tiles with the grid */
+  display: contents; /* To align tiles with the grid */
 }
 
 .tile {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.knight-svg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  transition: all 1s ease; /* Smooth transition for movement and scaling */
+  transform-origin: center; /* Ensures scaling happens centrally */
+}
+
+
+
+@keyframes green-highlight {
+  0%,
+  100% {
+    background-color: revert-layer;
+  }
+  50% {
+    background-color: green;
+  }
+}
+
+@keyframes yellow-highlight {
+  0%,
+  100% {
+    background-color: revert-layer;
+  }
+  50% {
+    background-color: yellow;
+  }
+}
+
+@keyframes red-highlight {
+  0%,
+  100% {
+    background-color: revert-layer;
+  }
+  50% {
+    background-color: red;
+  }
+}
+
+.green-highlight-animation {
+  animation: green-highlight 1s infinite;
+}
+
+.yellow-highlight-animation {
+  animation: yellow-highlight 1s infinite;
+}
+
+.red-highlight-animation {
+  animation: red-highlight 1s infinite;
 }
 
 /* Using wood-like colors for the tiles */
 .row:nth-child(odd) .tile:nth-child(odd),
 .row:nth-child(even) .tile:nth-child(even) {
-    background-color: #deb887; /* Lighter wood tone */
+  background-color: #deb887; /* Lighter wood tone */
 }
 
 .row:nth-child(odd) .tile:nth-child(even),
 .row:nth-child(even) .tile:nth-child(odd) {
-    background-color: #a0522d; /* Darker wood tone */
-}
-
-/*
-#message {
-    margin-top: 20px;
-    font-size: 1.2em;
+  background-color: #a0522d; /* Darker wood tone */
 }
