--- a/style.css
+++ b/style.css
@@ -1,3 +1,24 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  font-size: 62.5%;
+}
+
+/* html {
+    width: 100%;
+    height: 100vh;
+} */
+
+body {
+  font-size: 1.6rem;
+  /* width: 100%;
+    height: 100%; */
+}
+
 #chessboard {
   display: grid;
   grid-template-columns: 30px repeat(8, 1fr); /* 1 column for row labels + 8 columns for tiles */
@@ -29,20 +50,20 @@
   align-items: center;
   justify-content: center;
   position: relative;
+  padding: 0.5rem;
 }
 
 .knight-svg {
-  width: 100%;
-  height: 100%;
+  width: calc(100% - 1rem); /* Assuming padding is 0.25rem on each side */
+  height: calc(100% - 1rem);
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Center the SVG */
   z-index: 3;
   transition: all 1s ease; /* Smooth transition for movement and scaling */
   transform-origin: center; /* Ensures scaling happens centrally */
 }
-
-
 
 @keyframes green-highlight {
   0%,
